kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_option_aarch64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/option ===
> sub sp, sp, #0xb0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  mov x9, x21
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x23, x9
  add x11, x11, x24
  mov x9, x11
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0xac
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x84
  mov x9, x24
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x390
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x60
  mov x9, x21
  mov x24, x9
  mov x14, x24
  add x14, x14, x23
  mov x9, x14
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x688
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2c
  mov x9, x24
  mov x21, x9
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xb0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xb0
  ret
