kajit/src/snapshots/kajit__disasm_tests__disasm_postcard_option_x86_64.snap
---
source: kajit/src/disasm_tests.rs
expression: out
---
=== postcard/option ===
> push rbp
  sub rsp, 0xf0
  mov qword [rsp], rbp
  mov qword [rsp + 0x8], rbx
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov r10, r14
  mov rbx, r10
  mov r10, 0x38
  mov rdx, r10
  mov r10, 0x18
  mov rsi, r10
  mov qword [rsp + 0x70], rsi
  mov r10, rbx
  add r10, rdx
  mov rsi, r10
  mov r10, rsi
  mov r14, r10
  mov qword [r15], r12
  lea rdi, qword [r14]
  mov rsi, r15
  call $+0xe5
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xa8
  mov r10, rbx
  mov r14, r10
  mov qword [r15], r12
  lea rdi, qword [r14]
  mov rsi, r15
  call $+0x59d
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x79
  mov r10, r14
  mov rbx, r10
  mov rsi, qword [rsp + 0x70]
  mov r10, rbx
  add r10, rsi
  mov rax, r10
  mov r10, rax
  mov r14, r10
  mov qword [r15], r12
  lea rdi, qword [r14]
  mov rsi, r15
  call $+0xa73
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x33
  mov r10, rbx
  mov r14, r10
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xf0
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbx, qword [rsp + 0x8]
  mov rbp, qword [rsp]
  add rsp, 0xf0
  pop rbp
  ret
